Modify webpack and install vue

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <meta charset="utf-8">
+    <title>desktop-gitlab-snippets</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-    <script src="./dist/js/bundle.js"></script>
+    <div id="app"></div>
+    <script src="./dist/build.js"></script>
   </body>
 </html>
-
