--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>desktop-gitlab-snippets</title>
+    <meta charset="UTF-8">
+    <title>Hello World!</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="./dist/build.js"></script>
+    <h1>Hello World!</h1>
+    We are using node <script>document.write(process.versions.node)</script>,
+    Chrome <script>document.write(process.versions.chrome)</script>,
+    and Electron <script>document.write(process.versions.electron)</script>.
+    <script src="./dist/js/bundle.js"></script>
   </body>
 </html>
+
